// Vitest Snapshot v1

exports[`ESModel > events > are updated 1`] = `
[
  {
    "data": [
      1,
      1,
      {
        "meep": "moop",
      },
    ],
    "result": {
      "m": {
        "ins": [
          {
            "meep": "moop",
            "v": 1,
          },
        ],
      },
    },
    "ts": 0,
    "type": "es/m",
    "v": 1,
  },
  {
    "data": [
      1,
      1,
      {
        "meep": "moop",
        "v": 1,
      },
    ],
    "result": {},
    "ts": 0,
    "type": "es/m",
    "v": 2,
  },
  {
    "data": [
      1,
      1,
      {
        "a": [
          null,
          3,
        ],
        "beep": "boop",
        "v": 1,
      },
    ],
    "result": {
      "m": {
        "upd": [
          {
            "a": [
              null,
              3,
            ],
            "beep": "boop",
            "meep": null,
            "v": 1,
          },
        ],
      },
    },
    "ts": 0,
    "type": "es/m",
    "v": 3,
  },
  {
    "data": [
      3,
      1,
      {
        "beep": "boop",
        "v": 1,
      },
    ],
    "result": {},
    "ts": 0,
    "type": "es/m",
    "v": 4,
  },
  {
    "data": [
      3,
      1,
      {
        "a": [
          null,
          3,
        ],
        "beep": "foop",
        "v": 1,
      },
    ],
    "result": {
      "m": {
        "upd": [
          {
            "beep": "foop",
            "v": 1,
          },
        ],
      },
    },
    "ts": 0,
    "type": "es/m",
    "v": 5,
  },
]
`;

exports[`ESModel > events > work 1`] = `
[
  {
    "data": [
      1,
      1,
      {
        "meep": "moop",
      },
    ],
    "result": {
      "m": {
        "ins": [
          {
            "id": 1,
            "meep": "moop",
          },
        ],
      },
    },
    "ts": 0,
    "type": "es/m",
    "v": 1,
  },
  {
    "data": [
      3,
      1,
      {
        "beep": "boop",
        "id": 1,
      },
    ],
    "result": {
      "m": {
        "upd": [
          {
            "beep": "boop",
            "id": 1,
          },
        ],
      },
    },
    "ts": 0,
    "type": "es/m",
    "v": 2,
  },
  {
    "data": [
      2,
      2,
      {
        "meep": "moop",
      },
    ],
    "result": {
      "m": {
        "ins": [
          {
            "id": 2,
            "meep": "moop",
          },
        ],
      },
    },
    "ts": 0,
    "type": "es/m",
    "v": 3,
  },
  {
    "data": [
      4,
      3,
      {
        "beep": "boop",
        "id": 3,
      },
    ],
    "result": {
      "m": {
        "ins": [
          {
            "beep": "boop",
            "id": 3,
          },
        ],
      },
    },
    "ts": 0,
    "type": "es/m",
    "v": 4,
  },
  {
    "data": [
      0,
      3,
    ],
    "result": {
      "m": {
        "rm": [
          3,
        ],
      },
    },
    "ts": 0,
    "type": "es/m",
    "v": 5,
  },
]
`;
